<resources>
    <string name="app_name">MADT-Lab-3</string>
    <string name="welcome">Welcome</string>
    <string name="mc">MC</string>
    <string name="ms">MS</string>
    <string name="m">M+</string>
    <string name="m_">M-</string>
    <string name="arrow"><![CDATA[<—]]></string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="posandneg">+/-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="bar">/</string>
    <string name="percentage">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="as">*</string>
    <string name="_1_x">1/x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="el">El</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="sqrt_operator">sqrt %s</string>
    <string name="division_operator">%s /</string>
    <string name="cocient_operator">%s %%</string>
    <string name="multiplication_operator">%s *</string>
    <string name="division_by_one_operator">1 / %s</string>
    <string name="minus_operator">%s -</string>
    <string name="comma_operator">%s,</string>
    <string name="plus_operator">%s +</string>
    <string name="error_negative_sqrt">Error: Square root of a negative number</string>
</resources>